# LANShare-win

./: .gitignore  CMakeLists.txt  README.md
src/: Device.cpp  LANShare.cpp  LGui.cpp  MFCGui.cpp  Utils.cpp  gui.cpp  guitest.cpp  main.cpp  test.cpp
src/include/: Device.h  LANShare.h  LGui.h  MFCGui.h  Utils.h  gui.h  main.h
tools/: ByteUtils.cpp  CodeUtils.cpp  DataDec.cpp  DataEnc.cpp  IOUtils.cpp  NetWorldUtils.cpp  TCPClient.cpp  TCPServer.cpp  TimeTools.cpp  UDPClient.cpp  UDPServer.cpp
tools/include/: ByteUtils.h  CodeUtils.h  DataDec.h  DataEnc.h  IOInter.h  IOUtils.h  NetWorldUtils.h  SocketBase.h  TCPClient.h  TCPServer.h  TimeTools.h  Type.h  UDPClient.h  UDPServer.h
